Wed Oct 16 09:12:23 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master commit 2a74263.  This fixes
	  several bugs in RubyGems 2.2.0.preview.1.

	* test/rubygems:  ditto.

Wed Oct 16 07:25:02 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_mark_roots): rename roots to be categories
	  instead of function names.

Tue Oct 15 19:18:13 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.h (rb_objspace_reachable_objects_from_root): added.
	  This API provides information which objects are root objects.
	  `category' shows what kind of root objects.

	* gc.c (gc_mark_roots): separate from gc_marks_body().

Tue Oct 15 17:47:59 2013  Tanaka Akira  <akr@fsij.org>

	* process.c: Fix a typo.  MacOS X doesn't have ENOTSUPP.

Mon Oct 14 12:32:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): load statically linked extensions before
	  rubygems, because of ext/thread.

	* ruby.c (process_options): use gem_prelude instead of requiring
	  rubygems directly when --enable=gems is given.

	* Makefile.in (DEFAULT_PRELUDES): always use gem_prelude regardless of
	  --disable-rubygems.

Mon Oct 14 11:07:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): should append framework options to
	  $LIBS, not $LDFLAGS.  The former is propagated to exts.mk when
	  enable-static-linked-ext.

	* lib/mkmf.rb (create_makefile): ranlib on static library, not DLLIB.

Sun Oct 13 23:53:40 2013  Andrew Grimm  <andrew.j.grimm@gmail.com>

	* vsnprintf.c: Fix spelling from compliment to complement.
	  Patch by @agrimm.

	* include/ruby/ruby.h: ditto

Sun Oct 13 20:59:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (Init_BareVM): initialize defined_module_hash here,
	  Init_top_self() is too late to register core classes/modules.

	* compile.c (compile_array_): no hash to merge if it is empty.

	* vm.c (m_core_hash_merge_kwd): just check keys if only one argument
	  is given, without merging.
